# pyship

./: .coveragerc  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  blackify.bat  build.bat  coverage.bat  local_install.bat  make_venv.bat  mypy.ini  pypi.bat  pyproject.toml  pyship.bat  pytest.bat  pytest.ini  requirements-dev.txt  run_claude.bat  run_flake8.bat  set_env_var.bat  setup.py  sphinx.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
doc/: architecture.md  high_level_description.txt  history.md  index.md  pyship.md  pyship.pptx  pyship_execution.drawio  pyship_pyninsula_10_2020.pptx  quickstart.md  terminology.txt  todo.txt  userguide.md
doc/pycon/: pyship_pycon_2023.txt  pyship_pycon_4_2023.pptx
doc/pyninsula_10_2020/: pyninsula_script_10_2020.txt  pyship_pyninsula_10_2020.pptx
example/: LICENSE  build.bat  make_venv.bat  pyproject.toml  pyship.bat  requirements.txt  run_app.bat  setup.py
example/example_app/: __main__.py
example/exampleapp/: __init__.py  __main__.py  exampleapp.py
example/pyshipexample/: __init__.py  __main__.py  app.py  example_app.py
examples/example_cli/: pyship.bat  requirements-dev.txt  setup.py
examples/example_cli/example_cli/: __init__.py  __main__.py  __version__.py  example_cli.py
examples/example_gui/: pyship.bat  requirements-dev.txt  setup.py
examples/example_gui/example_gui/: __init__.py  __main__.py  __version__.py  example_gui.py
icon/: pyship_icon.txt
pyship/: __init__.py  __main__.py  __version__.py  _version_.py  app_info.py  arguments.py  atomic_zip.py  aws.py  ci.py  clip.py  cloud.py  constants.py  create_launcher.py  custom_print.py  date_time.py  download.py  exceptions.py  exe_return_codes.py  file_download.py  get-pip.py  get_icon.py  installer.py  launcher_stub.py  lip.py  logging.py  main.py  module_info.py  module_util.py  msix.py  nsis.py  os_util.py  path.py  py_ship.py  pyship.py  pyship_app.py  pyship_custom_print.py  pyship_exceptions.py  pyship_get_icon.py  pyship_icon.txt  pyship_log.py  (+17 more)
pyship/aws/: __init__.py  aws.py
pyship/launcher/: __init__.py  __main__.py  hash.py  launcher.py  launcher_standalone.py  metadata.py  restart_monitor.py
pyship/patch/: pyship_patch.py
pyship/updater/: __init__.py  aws.py  local.py  updater.py
scripts/: blackify.bat  coverage.bat  make_venv.bat  pip_download.bat  pypi.bat  pyship.bat  pytest.bat  run_claude.bat  run_flake8.bat  run_mypy.bat  run_ruff.bat  run_ruff_fix.bat  run_ty.bat  time_launcher.py  tox.bat
test_pyship/: __init__.py  conftest.py  make_test_app.py  run_tstpyshipapp.bat  test_a_create_launcher_for_pyship.py  test_a_module_info.py  test_a_target_app_info.py  test_ab_launcher_stub_log.py  test_ac_launcher_stub_exe_log.py  test_ad_launcher_stub_gui_exe_log.py  test_aws_access.py  test_b_app_info_pyproject.py  test_b_build_pyshipy.py  test_b_ci.py  test_b_create_launcher.py  test_b_download.py  test_b_get_icon.py  test_b_hash.py  test_b_logging.py  test_b_metadata.py  test_b_metadata_ui.py  test_b_module_info.py  test_b_msix.py  test_b_path_exceptions.py  test_b_pep440_semver.py  test_b_signing.py  test_b_signing_coverage.py  test_b_subprocess.py  test_b_target_app_info.py  test_c_build_pyshipy.py  test_c_create_launcher.py  test_c_target_app_info.py  test_cloud.py  test_d_create_clip.py  test_d_create_launcher.py  test_d_create_lip.py  test_e_create_launcher.py  test_e_update.py  test_f_update.py  test_flit_pyproject_toml.py  (+18 more)
test_pyship/data/flit_pyproject_toml/: pyproject.toml
test_pyship/tstpyshipapp/: __init__.py  pyproject.toml
test_pyship/tstpyshipapp/tstpyshipapp/: __init__.py  __main__.py  __version__.py  app.py
test_pyship/tstpyshipapp/tstpyshipapp_0.0.1/: __version__.py
test_pyship/tstpyshipapp/tstpyshipapp_0.0.2/: __init__.py  __version__.py  app.py
test_pyship/tstpyshipapp_0.0.1/: build.bat  make_venv.bat  pyproject.toml  requirements-dev.txt  setup.py
test_pyship/tstpyshipapp_0.0.1/tstpyshipapp/: __init__.py  app.py
test_pyship/tstpyshipapp_0.0.2/: make_venv.bat  pyproject.toml  requirements-dev.txt  setup.py
test_pyship/tstpyshipapp_0.0.2/tstpyshipapp/: __init__.py  app.py
