[project]
name = "pyship"
author = "abel"

[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyship"
author = "abel"
author-email = "j@abel.co"
home-page = "https://github.com/jamesabel/pyship"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "attrs",
    "balsa",
    "ismain",
    "pyinstaller",
    "sundry",
    "typeguard",
    "requests",
    "semver",
    "sentry-sdk",
    "toml"
]

[tool.pyship]
# allow pyship to build itself as an app, e.g. as a test case
is_gui = false  # pyship itself is CLI
description = "ships a python program to end users"
