[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyship"
version = "0.4.0"
description = "freezer, installer and updater for Python applications"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "abel", email = "j@abel.co"}]
keywords = ["freezer", "installer", "ship"]
dependencies = [
    "setuptools",
    "wheel",
    "ismain",
    "balsa",
    "requests",
    "attrs",
    "typeguard",
    "toml",
    "semver",
    "python-dateutil",
    "wheel-inspect",
    "boto3",
    "awsimple",
    "platformdirs",
    "pyshipupdate",
]

[project.urls]
Homepage = "https://github.com/jamesabel/pyship"
Download = "https://github.com/jamesabel/pyship"

[tool.setuptools.packages.find]
include = ["pyship", "pyship.*"]

[tool.setuptools.package-data]
pyship = ["*.ico", "py.typed"]

[tool.pyship]
# allow pyship to build itself as an app
is_gui = false  # pyship itself is CLI

[tool.ruff]
line-length = 192
target-version = "py311"
exclude = [
    "app",
    "build",
    "cache",
    "dist",
    "installers",
    "venv",
    ".venv",
    "test_pyship/tstpyshipapp_*",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # module level import not at top of file
    "F401",  # imported but unused
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
norecursedirs = ["tstpyshipapp"]

[tool.coverage.run]
source = ["pyship"]
omit = [
    "*/test_pyship/*",
    "*/tstpyshipapp*/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
