[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exampleapp"
version = "0.0.1"
description = "Example PySide6 GUI application for pyship"
requires-python = ">=3.11"
authors = [{name = "abel", email = "j@abel.co"}]
dependencies = [
    "PySide6",
    "ismain",
]

[tool.pyship]
ui = "gui"
code_sign = true                     # enable code signing
certificate_auto_select = true       # sign with the best certificate from the Windows Certificate Store (hardware token)
# certificate_sha1 = "AABBCCDD..."  # or specify a SHA1 thumbprint for a specific certificate
# Set the PYSHIP_SIGNING_CERTIFICATE_PIN env var to provide the hardware token PIN for unattended/CI builds

[tool.setuptools.packages.find]
include = ["exampleapp"]
