[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tstpyshipapp"
author = "abel"
author-email = "j@abel.co"
home-page = "https://github.com/jamesabel/pyship"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "ismain"
]

[tool.pyship]
is_gui = true
